--- a/lab4.html
+++ b/lab4.html
@@ -71,7 +71,7 @@
         Oops ... your browser doesn't support the HTML5 canvas element
     </canvas>
     
-    <img id = "texImage" src="image.jpg" hidden></img>
+    <img id = "texImage" src="image.gif" hidden></img>
     
 </body>
 
